--- a/ios/checksDashboard/Info.plist
+++ b/ios/checksDashboard/Info.plist
@@ -28,7 +28,6 @@
 	<true/>
 	<key>NSAppTransportSecurity</key>
 	<dict>
-	  <!-- Do not change NSAllowsArbitraryLoads to true, or you will risk app rejection! -->
 		<key>NSAllowsArbitraryLoads</key>
 		<false/>
 		<key>NSAllowsLocalNetworking</key>
@@ -36,6 +35,8 @@
 	</dict>
 	<key>NSLocationWhenInUseUsageDescription</key>
 	<string></string>
+	<key>RCTNewArchEnabled</key>
+	<true/>
 	<key>UILaunchStoryboardName</key>
 	<string>LaunchScreen</string>
 	<key>UIRequiredDeviceCapabilities</key>
@@ -50,5 +51,25 @@
 	</array>
 	<key>UIViewControllerBasedStatusBarAppearance</key>
 	<false/>
+	<key>UIAppFonts</key>
+	<array>
+	<string>node_modules/react-native-vector-icons/Fonts/AntDesign.ttf</string>
+	<string>node_modules/react-native-vector-icons/Fonts/Entypo.ttf</string>
+	<string>node_modules/react-native-vector-icons/Fonts/EvilIcons.ttf</string>
+	<string>node_modules/react-native-vector-icons/Fonts/Feather.ttf</string>
+	<string>node_modules/react-native-vector-icons/Fonts/FontAwesome.ttf</string>
+	<string>node_modules/react-native-vector-icons/Fonts/FontAwesome5_Brands.ttf</string>
+	<string>node_modules/react-native-vector-icons/Fonts/FontAwesome5_Regular.ttf</string>
+	<string>node_modules/react-native-vector-icons/Fonts/FontAwesome5_Solid.ttf</string>
+	<string>node_modules/react-native-vector-icons/Fonts/Foundation.ttf</string>
+	<string>node_modules/react-native-vector-icons/Fonts/Ionicons.ttf</string>
+	<string>node_modules/react-native-vector-icons/Fonts/MaterialCommunityIcons.ttf</string>
+	<string>node_modules/react-native-vector-icons/Fonts/MaterialIcons.ttf</string>
+	<string>node_modules/react-native-vector-icons/Fonts/Octicons.ttf</string>
+	<string>node_modules/react-native-vector-icons/Fonts/SimpleLineIcons.ttf</string>
+	<string>node_modules/react-native-vector-icons/Fonts/Zocial.ttf</string>
+	</array>
+	<key>NSUserNotificationUsageDescription</key>
+	<string>This app uses notifications to remind you of upcoming checks.</string>
 </dict>
 </plist>
