--- a/package.json
+++ b/package.json
@@ -10,10 +10,15 @@
     "test": "jest"
   },
   "dependencies": {
+    "@react-native-community/datetimepicker": "^8.4.5",
+    "@react-native-community/push-notification-ios": "^1.11.0",
+    "@react-native/new-app-screen": "0.82.0",
+    "firebase": "^12.3.0",
     "react": "19.1.1",
     "react-native": "0.82.0",
-    "@react-native/new-app-screen": "0.82.0",
-    "react-native-safe-area-context": "^5.5.2"
+    "react-native-push-notification": "^8.1.1",
+    "react-native-safe-area-context": "^5.5.2",
+    "react-native-vector-icons": "10.0.3"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
@@ -28,6 +33,8 @@
     "@react-native/typescript-config": "0.82.0",
     "@types/jest": "^29.5.13",
     "@types/react": "^19.1.1",
+    "@types/react-native-push-notification": "^8.1.4",
+    "@types/react-native-vector-icons": "^6.4.18",
     "@types/react-test-renderer": "^19.1.0",
     "eslint": "^8.19.0",
     "jest": "^29.6.3",
